# JrcCppCodeClinic

./: CMakeLists.txt  main  main.cpp
include/EightQueens/: EightQueens.h  IEightQueens.h
include/Threads/: Challenge_1.h  Challenge_2.h  Challenge_3.h  IThreads.h  Threads.h  Threads2.h  Threads3.h  Threads_datarace.h
include/WeatherStatistics/: IWeather_stats.h  weather_statistics.h
other_projects/docker/docker-compose/: common.env  docker-compose.yml
other_projects/docker/jrc_docker_images/docker_apache/: Dockerfile
src/EightQueens/: EightQueens.cpp
src/Threads/: Challenge_1.cpp  Challenge_2.cpp  Challenge_2_.cpp  Challenge_3 threadpool_version.cpp  Challenge_3.cpp  Threads.cpp  Threads2.cpp  Threads3.cpp  Threads_datarace.cpp
src/WeatherStatistics/: weather_statistics.cpp
